# evoagents

./: .gitignore  LICENSE  README.md  evoagents.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: README.md  run_demo.sh
evoagents/: __init__.py
evoagents/cli/: autofix_cmd.py  create_skill_cmd.py  init_cmd.py  main.py  promote_cmd.py  run_cmd.py  score_cmd.py  stats_cmd.py  trace_cmd.py
evoagents/core/: config.py  pipeline.py  skill.py  store.py
evoagents/improve/: patcher.py  promotion.py  replay.py
evoagents/presets/blank/: agentsmith.yaml  evoagents.yaml
evoagents/presets/demo/: agentsmith.yaml
evoagents/presets/demo/skills/perception/: SKILL.md
evoagents/presets/demo/skills/planner/: SKILL.md
evoagents/presets/research/skills/planner/versions/v1/: SKILL.md
evoagents/presets/research/skills/synthesizer/versions/v1/: SKILL.md
evoagents/providers/: anthropic_provider.py  base.py  openai_provider.py  registry.py
evoagents/scoring/: evaluator.py  judge.py
evoagents/tools/: base.py  http_get.py  registry.py
skills/perception/: SKILL.md
skills/summarizer/versions/v1/: SKILL.md
skills/synthesizer/: SKILL.md
